tests/functional/lang/eval-fail-bad-antiquote-1.err.exp
error:
       … while evaluating a path segment

         at /pwd/lang/eval-fail-bad-antiquote-1.nix:1:2:

            1| "${x: x}"
             |  ^
            2|

       error: cannot coerce a function to a string
